[gd_scene load_steps=10 format=2]

[ext_resource path="res://DestinationButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://LevelDetails.tscn" type="PackedScene" id=2]
[ext_resource path="res://MediumTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/GUI/Squario Level Select.svg" type="Texture" id=5]
[ext_resource path="res://assets/GUI/Squario Menu BG.png" type="Texture" id=6]
[ext_resource path="res://LevelSelect.gd" type="Script" id=7]
[ext_resource path="res://assets/GUI/Fonts/Pangolin-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://LevelRow.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 8 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="get_world" type="HTTPRequest" parent="."]

[node name="get_level" type="HTTPRequest" parent="."]
download_file = "user://selectedLevel.tscn"

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 3 )]
texture = ExtResource( 5 )

[node name="LevelList" type="VBoxContainer" parent="."]
margin_left = 265.0
margin_top = 174.0
margin_right = 753.0
margin_bottom = 505.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelsLabelRow" type="HBoxContainer" parent="LevelList"]
margin_right = 488.0
margin_bottom = 45.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="RichTextLabel" parent="LevelList/LevelsLabelRow"]
margin_right = 242.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RatingLabel" type="RichTextLabel" parent="LevelList/LevelsLabelRow"]
margin_left = 246.0
margin_right = 488.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[right]Rating[/right]"
text = "Rating"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="LevelList"]
margin_top = 49.0
margin_right = 488.0
margin_bottom = 331.0
rect_clip_content = false
size_flags_vertical = 3
size_flags_stretch_ratio = 6.22

[node name="LevelBox" type="VBoxContainer" parent="LevelList/ScrollContainer"]
margin_right = 488.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelRow" parent="LevelList/ScrollContainer/LevelBox" instance=ExtResource( 10 )]
visible = false
margin_right = 488.0
margin_bottom = 46.0

[node name="BackButton" parent="." instance=ExtResource( 1 )]
margin_left = 374.0
margin_top = 525.0
margin_right = 650.0
margin_bottom = 571.0
text = "Back"
type = "scene"
destination = "res://MainMenu.tscn"

[node name="LevelDetails" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="request_completed" from="get_world" to="." method="_on_get_world_request_completed"]
[connection signal="request_completed" from="get_level" to="." method="_on_get_level_request_completed"]
